packages/milli/milli-1.0.0.tar.gz/milli-1.0.0/local_dependencies/milli/src/update/facet/snapshots/incremental.rs/delete_from_end/15.snap
---
source: milli/src/update/facet/incremental.rs
---
0  0  k0        1    "[0, ]"
0  0  k1        1    "[1, ]"
0  0  k2        1    "[2, ]"
0  0  k3        1    "[3, ]"
0  0  k4        1    "[4, ]"
0  0  k5        1    "[5, ]"
0  0  k6        1    "[6, ]"
0  0  k7        1    "[7, ]"
0  0  k8        1    "[8, ]"
0  0  k9        1    "[9, ]"
0  0  k10       1    "[10, ]"
0  0  k11       1    "[11, ]"
0  0  k12       1    "[12, ]"
0  0  k13       1    "[13, ]"
0  0  k14       1    "[14, ]"

